parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ABSOLUTE
    ABSTRACT
    AND
    ARRAY
    CASE
    CONST
    DIV
    DOWNTO
    FILE
    FUNCTION
    GOTO
    IN
    LABEL
    LBRACKET
    MOD
    NIL
    NOT
    OF
    OR
    PACKED
    PROCEDURE
    RBRACKET
    RECORD
    SET
    TYPE
    WITH

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM ID SEMICOLON declarations compound_statement DOT
Rule 2     declarations -> VAR var_decl_list
Rule 3     declarations -> empty
Rule 4     var_decl_list -> var_decl_list var_decl
Rule 5     var_decl_list -> var_decl
Rule 6     var_decl -> id_list COLON ID SEMICOLON
Rule 7     id_list -> id_list COMMA ID
Rule 8     id_list -> ID
Rule 9     compound_statement -> BEGIN statement_list END
Rule 10    statement_list -> statement_list SEMICOLON statement
Rule 11    statement_list -> statement
Rule 12    statement -> assignment
Rule 13    statement -> if_statement
Rule 14    statement -> while_statement
Rule 15    statement -> for_statement
Rule 16    statement -> repeat_statement
Rule 17    statement -> compound_statement
Rule 18    statement -> empty
Rule 19    assignment -> ID ASSIGN expression
Rule 20    if_statement -> IF condition THEN statement
Rule 21    if_statement -> IF condition THEN statement ELSE statement
Rule 22    while_statement -> WHILE condition DO statement
Rule 23    for_statement -> FOR assignment TO expression DO statement
Rule 24    repeat_statement -> REPEAT statement_list UNTIL condition
Rule 25    condition -> expression LESS expression
Rule 26    condition -> expression GREATER expression
Rule 27    condition -> expression EQUAL expression
Rule 28    condition -> expression LESSEQUAL expression
Rule 29    condition -> expression GREATEREQUAL expression
Rule 30    condition -> expression DISTINT expression
Rule 31    expression -> expression PLUS term
Rule 32    expression -> expression MINUS term
Rule 33    expression -> term
Rule 34    term -> term TIMES factor
Rule 35    term -> term DIVIDE factor
Rule 36    term -> factor
Rule 37    factor -> NUMBER
Rule 38    factor -> ID
Rule 39    factor -> LPAREN expression RPAREN
Rule 40    empty -> <empty>

Terminals, with rules where they appear

ABSOLUTE             : 
ABSTRACT             : 
AND                  : 
ARRAY                : 
ASSIGN               : 19
BEGIN                : 9
CASE                 : 
COLON                : 6
COMMA                : 7
CONST                : 
DISTINT              : 30
DIV                  : 
DIVIDE               : 35
DO                   : 22 23
DOT                  : 1
DOWNTO               : 
ELSE                 : 21
END                  : 9
EQUAL                : 27
FILE                 : 
FOR                  : 23
FUNCTION             : 
GOTO                 : 
GREATER              : 26
GREATEREQUAL         : 29
ID                   : 1 6 7 8 19 38
IF                   : 20 21
IN                   : 
LABEL                : 
LBRACKET             : 
LESS                 : 25
LESSEQUAL            : 28
LPAREN               : 39
MINUS                : 32
MOD                  : 
NIL                  : 
NOT                  : 
NUMBER               : 37
OF                   : 
OR                   : 
PACKED               : 
PLUS                 : 31
PROCEDURE            : 
PROGRAM              : 1
RBRACKET             : 
RECORD               : 
REPEAT               : 24
RPAREN               : 39
SEMICOLON            : 1 6 10
SET                  : 
THEN                 : 20 21
TIMES                : 34
TO                   : 23
TYPE                 : 
UNTIL                : 24
VAR                  : 2
WHILE                : 22
WITH                 : 
error                : 

Nonterminals, with rules where they appear

assignment           : 12 23
compound_statement   : 1 17
condition            : 20 21 22 24
declarations         : 1
empty                : 3 18
expression           : 19 23 25 25 26 26 27 27 28 28 29 29 30 30 31 32 39
factor               : 34 35 36
for_statement        : 15
id_list              : 6 7
if_statement         : 13
program              : 0
repeat_statement     : 16
statement            : 10 11 20 21 21 22 23
statement_list       : 9 10 24
term                 : 31 32 33 34 35
var_decl             : 4 5
var_decl_list        : 2 4
while_statement      : 14

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM ID SEMICOLON declarations compound_statement DOT

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . ID SEMICOLON declarations compound_statement DOT

    ID              shift and go to state 3


state 3

    (1) program -> PROGRAM ID . SEMICOLON declarations compound_statement DOT

    SEMICOLON       shift and go to state 4


state 4

    (1) program -> PROGRAM ID SEMICOLON . declarations compound_statement DOT
    (2) declarations -> . VAR var_decl_list
    (3) declarations -> . empty
    (40) empty -> .

    VAR             shift and go to state 6
    BEGIN           reduce using rule 40 (empty -> .)

    declarations                   shift and go to state 5
    empty                          shift and go to state 7

state 5

    (1) program -> PROGRAM ID SEMICOLON declarations . compound_statement DOT
    (9) compound_statement -> . BEGIN statement_list END

    BEGIN           shift and go to state 9

    compound_statement             shift and go to state 8

state 6

    (2) declarations -> VAR . var_decl_list
    (4) var_decl_list -> . var_decl_list var_decl
    (5) var_decl_list -> . var_decl
    (6) var_decl -> . id_list COLON ID SEMICOLON
    (7) id_list -> . id_list COMMA ID
    (8) id_list -> . ID

    ID              shift and go to state 13

    var_decl_list                  shift and go to state 10
    var_decl                       shift and go to state 11
    id_list                        shift and go to state 12

state 7

    (3) declarations -> empty .

    BEGIN           reduce using rule 3 (declarations -> empty .)


state 8

    (1) program -> PROGRAM ID SEMICOLON declarations compound_statement . DOT

    DOT             shift and go to state 14


state 9

    (9) compound_statement -> BEGIN . statement_list END
    (10) statement_list -> . statement_list SEMICOLON statement
    (11) statement_list -> . statement
    (12) statement -> . assignment
    (13) statement -> . if_statement
    (14) statement -> . while_statement
    (15) statement -> . for_statement
    (16) statement -> . repeat_statement
    (17) statement -> . compound_statement
    (18) statement -> . empty
    (19) assignment -> . ID ASSIGN expression
    (20) if_statement -> . IF condition THEN statement
    (21) if_statement -> . IF condition THEN statement ELSE statement
    (22) while_statement -> . WHILE condition DO statement
    (23) for_statement -> . FOR assignment TO expression DO statement
    (24) repeat_statement -> . REPEAT statement_list UNTIL condition
    (9) compound_statement -> . BEGIN statement_list END
    (40) empty -> .

    ID              shift and go to state 24
    IF              shift and go to state 25
    WHILE           shift and go to state 26
    FOR             shift and go to state 27
    REPEAT          shift and go to state 28
    BEGIN           shift and go to state 9
    END             reduce using rule 40 (empty -> .)
    SEMICOLON       reduce using rule 40 (empty -> .)

    statement_list                 shift and go to state 15
    statement                      shift and go to state 16
    assignment                     shift and go to state 17
    if_statement                   shift and go to state 18
    while_statement                shift and go to state 19
    for_statement                  shift and go to state 20
    repeat_statement               shift and go to state 21
    compound_statement             shift and go to state 22
    empty                          shift and go to state 23

state 10

    (2) declarations -> VAR var_decl_list .
    (4) var_decl_list -> var_decl_list . var_decl
    (6) var_decl -> . id_list COLON ID SEMICOLON
    (7) id_list -> . id_list COMMA ID
    (8) id_list -> . ID

    BEGIN           reduce using rule 2 (declarations -> VAR var_decl_list .)
    ID              shift and go to state 13

    var_decl                       shift and go to state 29
    id_list                        shift and go to state 12

state 11

    (5) var_decl_list -> var_decl .

    ID              reduce using rule 5 (var_decl_list -> var_decl .)
    BEGIN           reduce using rule 5 (var_decl_list -> var_decl .)


state 12

    (6) var_decl -> id_list . COLON ID SEMICOLON
    (7) id_list -> id_list . COMMA ID

    COLON           shift and go to state 30
    COMMA           shift and go to state 31


state 13

    (8) id_list -> ID .

    COLON           reduce using rule 8 (id_list -> ID .)
    COMMA           reduce using rule 8 (id_list -> ID .)


state 14

    (1) program -> PROGRAM ID SEMICOLON declarations compound_statement DOT .

    $end            reduce using rule 1 (program -> PROGRAM ID SEMICOLON declarations compound_statement DOT .)


state 15

    (9) compound_statement -> BEGIN statement_list . END
    (10) statement_list -> statement_list . SEMICOLON statement

    END             shift and go to state 32
    SEMICOLON       shift and go to state 33


state 16

    (11) statement_list -> statement .

    END             reduce using rule 11 (statement_list -> statement .)
    SEMICOLON       reduce using rule 11 (statement_list -> statement .)
    UNTIL           reduce using rule 11 (statement_list -> statement .)


state 17

    (12) statement -> assignment .

    END             reduce using rule 12 (statement -> assignment .)
    SEMICOLON       reduce using rule 12 (statement -> assignment .)
    UNTIL           reduce using rule 12 (statement -> assignment .)
    ELSE            reduce using rule 12 (statement -> assignment .)


state 18

    (13) statement -> if_statement .

    END             reduce using rule 13 (statement -> if_statement .)
    SEMICOLON       reduce using rule 13 (statement -> if_statement .)
    UNTIL           reduce using rule 13 (statement -> if_statement .)
    ELSE            reduce using rule 13 (statement -> if_statement .)


state 19

    (14) statement -> while_statement .

    END             reduce using rule 14 (statement -> while_statement .)
    SEMICOLON       reduce using rule 14 (statement -> while_statement .)
    UNTIL           reduce using rule 14 (statement -> while_statement .)
    ELSE            reduce using rule 14 (statement -> while_statement .)


state 20

    (15) statement -> for_statement .

    END             reduce using rule 15 (statement -> for_statement .)
    SEMICOLON       reduce using rule 15 (statement -> for_statement .)
    UNTIL           reduce using rule 15 (statement -> for_statement .)
    ELSE            reduce using rule 15 (statement -> for_statement .)


state 21

    (16) statement -> repeat_statement .

    END             reduce using rule 16 (statement -> repeat_statement .)
    SEMICOLON       reduce using rule 16 (statement -> repeat_statement .)
    UNTIL           reduce using rule 16 (statement -> repeat_statement .)
    ELSE            reduce using rule 16 (statement -> repeat_statement .)


state 22

    (17) statement -> compound_statement .

    END             reduce using rule 17 (statement -> compound_statement .)
    SEMICOLON       reduce using rule 17 (statement -> compound_statement .)
    UNTIL           reduce using rule 17 (statement -> compound_statement .)
    ELSE            reduce using rule 17 (statement -> compound_statement .)


state 23

    (18) statement -> empty .

    END             reduce using rule 18 (statement -> empty .)
    SEMICOLON       reduce using rule 18 (statement -> empty .)
    UNTIL           reduce using rule 18 (statement -> empty .)
    ELSE            reduce using rule 18 (statement -> empty .)


state 24

    (19) assignment -> ID . ASSIGN expression

    ASSIGN          shift and go to state 34


state 25

    (20) if_statement -> IF . condition THEN statement
    (21) if_statement -> IF . condition THEN statement ELSE statement
    (25) condition -> . expression LESS expression
    (26) condition -> . expression GREATER expression
    (27) condition -> . expression EQUAL expression
    (28) condition -> . expression LESSEQUAL expression
    (29) condition -> . expression GREATEREQUAL expression
    (30) condition -> . expression DISTINT expression
    (31) expression -> . expression PLUS term
    (32) expression -> . expression MINUS term
    (33) expression -> . term
    (34) term -> . term TIMES factor
    (35) term -> . term DIVIDE factor
    (36) term -> . factor
    (37) factor -> . NUMBER
    (38) factor -> . ID
    (39) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 39
    ID              shift and go to state 40
    LPAREN          shift and go to state 41

    condition                      shift and go to state 35
    expression                     shift and go to state 36
    term                           shift and go to state 37
    factor                         shift and go to state 38

state 26

    (22) while_statement -> WHILE . condition DO statement
    (25) condition -> . expression LESS expression
    (26) condition -> . expression GREATER expression
    (27) condition -> . expression EQUAL expression
    (28) condition -> . expression LESSEQUAL expression
    (29) condition -> . expression GREATEREQUAL expression
    (30) condition -> . expression DISTINT expression
    (31) expression -> . expression PLUS term
    (32) expression -> . expression MINUS term
    (33) expression -> . term
    (34) term -> . term TIMES factor
    (35) term -> . term DIVIDE factor
    (36) term -> . factor
    (37) factor -> . NUMBER
    (38) factor -> . ID
    (39) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 39
    ID              shift and go to state 40
    LPAREN          shift and go to state 41

    condition                      shift and go to state 42
    expression                     shift and go to state 36
    term                           shift and go to state 37
    factor                         shift and go to state 38

state 27

    (23) for_statement -> FOR . assignment TO expression DO statement
    (19) assignment -> . ID ASSIGN expression

    ID              shift and go to state 24

    assignment                     shift and go to state 43

state 28

    (24) repeat_statement -> REPEAT . statement_list UNTIL condition
    (10) statement_list -> . statement_list SEMICOLON statement
    (11) statement_list -> . statement
    (12) statement -> . assignment
    (13) statement -> . if_statement
    (14) statement -> . while_statement
    (15) statement -> . for_statement
    (16) statement -> . repeat_statement
    (17) statement -> . compound_statement
    (18) statement -> . empty
    (19) assignment -> . ID ASSIGN expression
    (20) if_statement -> . IF condition THEN statement
    (21) if_statement -> . IF condition THEN statement ELSE statement
    (22) while_statement -> . WHILE condition DO statement
    (23) for_statement -> . FOR assignment TO expression DO statement
    (24) repeat_statement -> . REPEAT statement_list UNTIL condition
    (9) compound_statement -> . BEGIN statement_list END
    (40) empty -> .

    ID              shift and go to state 24
    IF              shift and go to state 25
    WHILE           shift and go to state 26
    FOR             shift and go to state 27
    REPEAT          shift and go to state 28
    BEGIN           shift and go to state 9
    UNTIL           reduce using rule 40 (empty -> .)
    SEMICOLON       reduce using rule 40 (empty -> .)

    statement_list                 shift and go to state 44
    statement                      shift and go to state 16
    assignment                     shift and go to state 17
    if_statement                   shift and go to state 18
    while_statement                shift and go to state 19
    for_statement                  shift and go to state 20
    repeat_statement               shift and go to state 21
    compound_statement             shift and go to state 22
    empty                          shift and go to state 23

state 29

    (4) var_decl_list -> var_decl_list var_decl .

    ID              reduce using rule 4 (var_decl_list -> var_decl_list var_decl .)
    BEGIN           reduce using rule 4 (var_decl_list -> var_decl_list var_decl .)


state 30

    (6) var_decl -> id_list COLON . ID SEMICOLON

    ID              shift and go to state 45


state 31

    (7) id_list -> id_list COMMA . ID

    ID              shift and go to state 46


state 32

    (9) compound_statement -> BEGIN statement_list END .

    DOT             reduce using rule 9 (compound_statement -> BEGIN statement_list END .)
    END             reduce using rule 9 (compound_statement -> BEGIN statement_list END .)
    SEMICOLON       reduce using rule 9 (compound_statement -> BEGIN statement_list END .)
    UNTIL           reduce using rule 9 (compound_statement -> BEGIN statement_list END .)
    ELSE            reduce using rule 9 (compound_statement -> BEGIN statement_list END .)


state 33

    (10) statement_list -> statement_list SEMICOLON . statement
    (12) statement -> . assignment
    (13) statement -> . if_statement
    (14) statement -> . while_statement
    (15) statement -> . for_statement
    (16) statement -> . repeat_statement
    (17) statement -> . compound_statement
    (18) statement -> . empty
    (19) assignment -> . ID ASSIGN expression
    (20) if_statement -> . IF condition THEN statement
    (21) if_statement -> . IF condition THEN statement ELSE statement
    (22) while_statement -> . WHILE condition DO statement
    (23) for_statement -> . FOR assignment TO expression DO statement
    (24) repeat_statement -> . REPEAT statement_list UNTIL condition
    (9) compound_statement -> . BEGIN statement_list END
    (40) empty -> .

    ID              shift and go to state 24
    IF              shift and go to state 25
    WHILE           shift and go to state 26
    FOR             shift and go to state 27
    REPEAT          shift and go to state 28
    BEGIN           shift and go to state 9
    END             reduce using rule 40 (empty -> .)
    SEMICOLON       reduce using rule 40 (empty -> .)
    UNTIL           reduce using rule 40 (empty -> .)

    statement                      shift and go to state 47
    assignment                     shift and go to state 17
    if_statement                   shift and go to state 18
    while_statement                shift and go to state 19
    for_statement                  shift and go to state 20
    repeat_statement               shift and go to state 21
    compound_statement             shift and go to state 22
    empty                          shift and go to state 23

state 34

    (19) assignment -> ID ASSIGN . expression
    (31) expression -> . expression PLUS term
    (32) expression -> . expression MINUS term
    (33) expression -> . term
    (34) term -> . term TIMES factor
    (35) term -> . term DIVIDE factor
    (36) term -> . factor
    (37) factor -> . NUMBER
    (38) factor -> . ID
    (39) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 39
    ID              shift and go to state 40
    LPAREN          shift and go to state 41

    expression                     shift and go to state 48
    term                           shift and go to state 37
    factor                         shift and go to state 38

state 35

    (20) if_statement -> IF condition . THEN statement
    (21) if_statement -> IF condition . THEN statement ELSE statement

    THEN            shift and go to state 49


state 36

    (25) condition -> expression . LESS expression
    (26) condition -> expression . GREATER expression
    (27) condition -> expression . EQUAL expression
    (28) condition -> expression . LESSEQUAL expression
    (29) condition -> expression . GREATEREQUAL expression
    (30) condition -> expression . DISTINT expression
    (31) expression -> expression . PLUS term
    (32) expression -> expression . MINUS term

    LESS            shift and go to state 50
    GREATER         shift and go to state 51
    EQUAL           shift and go to state 52
    LESSEQUAL       shift and go to state 53
    GREATEREQUAL    shift and go to state 54
    DISTINT         shift and go to state 55
    PLUS            shift and go to state 56
    MINUS           shift and go to state 57


state 37

    (33) expression -> term .
    (34) term -> term . TIMES factor
    (35) term -> term . DIVIDE factor

    LESS            reduce using rule 33 (expression -> term .)
    GREATER         reduce using rule 33 (expression -> term .)
    EQUAL           reduce using rule 33 (expression -> term .)
    LESSEQUAL       reduce using rule 33 (expression -> term .)
    GREATEREQUAL    reduce using rule 33 (expression -> term .)
    DISTINT         reduce using rule 33 (expression -> term .)
    PLUS            reduce using rule 33 (expression -> term .)
    MINUS           reduce using rule 33 (expression -> term .)
    END             reduce using rule 33 (expression -> term .)
    SEMICOLON       reduce using rule 33 (expression -> term .)
    TO              reduce using rule 33 (expression -> term .)
    UNTIL           reduce using rule 33 (expression -> term .)
    ELSE            reduce using rule 33 (expression -> term .)
    RPAREN          reduce using rule 33 (expression -> term .)
    THEN            reduce using rule 33 (expression -> term .)
    DO              reduce using rule 33 (expression -> term .)
    TIMES           shift and go to state 58
    DIVIDE          shift and go to state 59


state 38

    (36) term -> factor .

    TIMES           reduce using rule 36 (term -> factor .)
    DIVIDE          reduce using rule 36 (term -> factor .)
    LESS            reduce using rule 36 (term -> factor .)
    GREATER         reduce using rule 36 (term -> factor .)
    EQUAL           reduce using rule 36 (term -> factor .)
    LESSEQUAL       reduce using rule 36 (term -> factor .)
    GREATEREQUAL    reduce using rule 36 (term -> factor .)
    DISTINT         reduce using rule 36 (term -> factor .)
    PLUS            reduce using rule 36 (term -> factor .)
    MINUS           reduce using rule 36 (term -> factor .)
    END             reduce using rule 36 (term -> factor .)
    SEMICOLON       reduce using rule 36 (term -> factor .)
    TO              reduce using rule 36 (term -> factor .)
    UNTIL           reduce using rule 36 (term -> factor .)
    ELSE            reduce using rule 36 (term -> factor .)
    RPAREN          reduce using rule 36 (term -> factor .)
    THEN            reduce using rule 36 (term -> factor .)
    DO              reduce using rule 36 (term -> factor .)


state 39

    (37) factor -> NUMBER .

    TIMES           reduce using rule 37 (factor -> NUMBER .)
    DIVIDE          reduce using rule 37 (factor -> NUMBER .)
    LESS            reduce using rule 37 (factor -> NUMBER .)
    GREATER         reduce using rule 37 (factor -> NUMBER .)
    EQUAL           reduce using rule 37 (factor -> NUMBER .)
    LESSEQUAL       reduce using rule 37 (factor -> NUMBER .)
    GREATEREQUAL    reduce using rule 37 (factor -> NUMBER .)
    DISTINT         reduce using rule 37 (factor -> NUMBER .)
    PLUS            reduce using rule 37 (factor -> NUMBER .)
    MINUS           reduce using rule 37 (factor -> NUMBER .)
    END             reduce using rule 37 (factor -> NUMBER .)
    SEMICOLON       reduce using rule 37 (factor -> NUMBER .)
    TO              reduce using rule 37 (factor -> NUMBER .)
    UNTIL           reduce using rule 37 (factor -> NUMBER .)
    ELSE            reduce using rule 37 (factor -> NUMBER .)
    RPAREN          reduce using rule 37 (factor -> NUMBER .)
    THEN            reduce using rule 37 (factor -> NUMBER .)
    DO              reduce using rule 37 (factor -> NUMBER .)


state 40

    (38) factor -> ID .

    TIMES           reduce using rule 38 (factor -> ID .)
    DIVIDE          reduce using rule 38 (factor -> ID .)
    LESS            reduce using rule 38 (factor -> ID .)
    GREATER         reduce using rule 38 (factor -> ID .)
    EQUAL           reduce using rule 38 (factor -> ID .)
    LESSEQUAL       reduce using rule 38 (factor -> ID .)
    GREATEREQUAL    reduce using rule 38 (factor -> ID .)
    DISTINT         reduce using rule 38 (factor -> ID .)
    PLUS            reduce using rule 38 (factor -> ID .)
    MINUS           reduce using rule 38 (factor -> ID .)
    END             reduce using rule 38 (factor -> ID .)
    SEMICOLON       reduce using rule 38 (factor -> ID .)
    TO              reduce using rule 38 (factor -> ID .)
    UNTIL           reduce using rule 38 (factor -> ID .)
    ELSE            reduce using rule 38 (factor -> ID .)
    RPAREN          reduce using rule 38 (factor -> ID .)
    THEN            reduce using rule 38 (factor -> ID .)
    DO              reduce using rule 38 (factor -> ID .)


state 41

    (39) factor -> LPAREN . expression RPAREN
    (31) expression -> . expression PLUS term
    (32) expression -> . expression MINUS term
    (33) expression -> . term
    (34) term -> . term TIMES factor
    (35) term -> . term DIVIDE factor
    (36) term -> . factor
    (37) factor -> . NUMBER
    (38) factor -> . ID
    (39) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 39
    ID              shift and go to state 40
    LPAREN          shift and go to state 41

    expression                     shift and go to state 60
    term                           shift and go to state 37
    factor                         shift and go to state 38

state 42

    (22) while_statement -> WHILE condition . DO statement

    DO              shift and go to state 61


state 43

    (23) for_statement -> FOR assignment . TO expression DO statement

    TO              shift and go to state 62


state 44

    (24) repeat_statement -> REPEAT statement_list . UNTIL condition
    (10) statement_list -> statement_list . SEMICOLON statement

    UNTIL           shift and go to state 63
    SEMICOLON       shift and go to state 33


state 45

    (6) var_decl -> id_list COLON ID . SEMICOLON

    SEMICOLON       shift and go to state 64


state 46

    (7) id_list -> id_list COMMA ID .

    COLON           reduce using rule 7 (id_list -> id_list COMMA ID .)
    COMMA           reduce using rule 7 (id_list -> id_list COMMA ID .)


state 47

    (10) statement_list -> statement_list SEMICOLON statement .

    END             reduce using rule 10 (statement_list -> statement_list SEMICOLON statement .)
    SEMICOLON       reduce using rule 10 (statement_list -> statement_list SEMICOLON statement .)
    UNTIL           reduce using rule 10 (statement_list -> statement_list SEMICOLON statement .)


state 48

    (19) assignment -> ID ASSIGN expression .
    (31) expression -> expression . PLUS term
    (32) expression -> expression . MINUS term

    END             reduce using rule 19 (assignment -> ID ASSIGN expression .)
    SEMICOLON       reduce using rule 19 (assignment -> ID ASSIGN expression .)
    TO              reduce using rule 19 (assignment -> ID ASSIGN expression .)
    UNTIL           reduce using rule 19 (assignment -> ID ASSIGN expression .)
    ELSE            reduce using rule 19 (assignment -> ID ASSIGN expression .)
    PLUS            shift and go to state 56
    MINUS           shift and go to state 57


state 49

    (20) if_statement -> IF condition THEN . statement
    (21) if_statement -> IF condition THEN . statement ELSE statement
    (12) statement -> . assignment
    (13) statement -> . if_statement
    (14) statement -> . while_statement
    (15) statement -> . for_statement
    (16) statement -> . repeat_statement
    (17) statement -> . compound_statement
    (18) statement -> . empty
    (19) assignment -> . ID ASSIGN expression
    (20) if_statement -> . IF condition THEN statement
    (21) if_statement -> . IF condition THEN statement ELSE statement
    (22) while_statement -> . WHILE condition DO statement
    (23) for_statement -> . FOR assignment TO expression DO statement
    (24) repeat_statement -> . REPEAT statement_list UNTIL condition
    (9) compound_statement -> . BEGIN statement_list END
    (40) empty -> .

    ID              shift and go to state 24
    IF              shift and go to state 25
    WHILE           shift and go to state 26
    FOR             shift and go to state 27
    REPEAT          shift and go to state 28
    BEGIN           shift and go to state 9
    ELSE            reduce using rule 40 (empty -> .)
    END             reduce using rule 40 (empty -> .)
    SEMICOLON       reduce using rule 40 (empty -> .)
    UNTIL           reduce using rule 40 (empty -> .)

    statement                      shift and go to state 65
    assignment                     shift and go to state 17
    if_statement                   shift and go to state 18
    while_statement                shift and go to state 19
    for_statement                  shift and go to state 20
    repeat_statement               shift and go to state 21
    compound_statement             shift and go to state 22
    empty                          shift and go to state 23

state 50

    (25) condition -> expression LESS . expression
    (31) expression -> . expression PLUS term
    (32) expression -> . expression MINUS term
    (33) expression -> . term
    (34) term -> . term TIMES factor
    (35) term -> . term DIVIDE factor
    (36) term -> . factor
    (37) factor -> . NUMBER
    (38) factor -> . ID
    (39) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 39
    ID              shift and go to state 40
    LPAREN          shift and go to state 41

    expression                     shift and go to state 66
    term                           shift and go to state 37
    factor                         shift and go to state 38

state 51

    (26) condition -> expression GREATER . expression
    (31) expression -> . expression PLUS term
    (32) expression -> . expression MINUS term
    (33) expression -> . term
    (34) term -> . term TIMES factor
    (35) term -> . term DIVIDE factor
    (36) term -> . factor
    (37) factor -> . NUMBER
    (38) factor -> . ID
    (39) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 39
    ID              shift and go to state 40
    LPAREN          shift and go to state 41

    expression                     shift and go to state 67
    term                           shift and go to state 37
    factor                         shift and go to state 38

state 52

    (27) condition -> expression EQUAL . expression
    (31) expression -> . expression PLUS term
    (32) expression -> . expression MINUS term
    (33) expression -> . term
    (34) term -> . term TIMES factor
    (35) term -> . term DIVIDE factor
    (36) term -> . factor
    (37) factor -> . NUMBER
    (38) factor -> . ID
    (39) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 39
    ID              shift and go to state 40
    LPAREN          shift and go to state 41

    expression                     shift and go to state 68
    term                           shift and go to state 37
    factor                         shift and go to state 38

state 53

    (28) condition -> expression LESSEQUAL . expression
    (31) expression -> . expression PLUS term
    (32) expression -> . expression MINUS term
    (33) expression -> . term
    (34) term -> . term TIMES factor
    (35) term -> . term DIVIDE factor
    (36) term -> . factor
    (37) factor -> . NUMBER
    (38) factor -> . ID
    (39) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 39
    ID              shift and go to state 40
    LPAREN          shift and go to state 41

    expression                     shift and go to state 69
    term                           shift and go to state 37
    factor                         shift and go to state 38

state 54

    (29) condition -> expression GREATEREQUAL . expression
    (31) expression -> . expression PLUS term
    (32) expression -> . expression MINUS term
    (33) expression -> . term
    (34) term -> . term TIMES factor
    (35) term -> . term DIVIDE factor
    (36) term -> . factor
    (37) factor -> . NUMBER
    (38) factor -> . ID
    (39) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 39
    ID              shift and go to state 40
    LPAREN          shift and go to state 41

    expression                     shift and go to state 70
    term                           shift and go to state 37
    factor                         shift and go to state 38

state 55

    (30) condition -> expression DISTINT . expression
    (31) expression -> . expression PLUS term
    (32) expression -> . expression MINUS term
    (33) expression -> . term
    (34) term -> . term TIMES factor
    (35) term -> . term DIVIDE factor
    (36) term -> . factor
    (37) factor -> . NUMBER
    (38) factor -> . ID
    (39) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 39
    ID              shift and go to state 40
    LPAREN          shift and go to state 41

    expression                     shift and go to state 71
    term                           shift and go to state 37
    factor                         shift and go to state 38

state 56

    (31) expression -> expression PLUS . term
    (34) term -> . term TIMES factor
    (35) term -> . term DIVIDE factor
    (36) term -> . factor
    (37) factor -> . NUMBER
    (38) factor -> . ID
    (39) factor -> . LPAREN expression RPAREN
